Finished the game

--- a/src/app/game-screen/game-screen.component.html
+++ b/src/app/game-screen/game-screen.component.html
@@ -1,1 +1,1 @@
-<canvas class="game-canvas" (keypress)="keyWasPressed($event)" tabindex="0" #gameCanvas></canvas>
+<canvas class="game-canvas" (keypress)="keyWasPressed($event)" tabindex="0" #gameCanvas focus></canvas>
